syntax = "proto3";

option csharp_namespace = "GrpcsAgent";

package GrpcsAgent;

service Notifier {
  rpc Notify (NotifyRequest) returns (NotifyReply);
}

message NotifyRequest {
  string message = 1;
}

message NotifyReply {
  bool isSuccess = 1;
}
